--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.14</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
